--- a/include/portable.h.in
+++ b/include/portable.h.in
@@ -66,6 +66,15 @@
 /* define this if sys_errlist is not defined in stdio.h or errno.h */
 #undef DECL_SYS_ERRLIST
 
+/* define this to use LDAP LDBM backends */
+#undef LDAP_LDBM
+
+/* define this to use LDAP PASSWD backends */
+#undef LDAP_PASSWD
+
+/* define this to use LDAP SHELL backends */
+#undef LDAP_SHELL
+
 /* define this to use DB BTREES */
 #undef LDBM_USE_DBBTREE
 
@@ -77,6 +86,9 @@
 
 /* define this to use NDBM */
 #undef LDBM_USE_NDBM
+
+/* define this you have crypt */
+#undef HAVE_CRYPT
 
 /* Define if you have the gethostname function.  */
 #undef HAVE_GETHOSTNAME
@@ -155,9 +167,6 @@
 
 /* Define if you have the compat library (-lcompat).  */
 #undef HAVE_LIBCOMPAT
-
-/* Define if you have the crypt library (-lcrypt).  */
-#undef HAVE_LIBCRYPT
 
 
 #include "bridge.h"
