--- a/servers/slapd/back-shell/Makefile.in
+++ b/servers/slapd/back-shell/Makefile.in
@@ -3,18 +3,14 @@ SRCS	= init.c config.c fork.c search.c bind.c unbind.c add.c delete.c \
 OBJS	= init.o config.o fork.o search.o bind.o unbind.o add.o delete.o \
 		modify.o modrdn.o compare.o abandon.o result.o
 
-XPROGRAMS =		libback-shell.a
+BUILD_OPT = "--enable-shell"
+BUILD_SRV = @BUILD_SHELL@
+
+PROGRAMS =		libback-shell.a
 XINCLUDEDIR =	-I..
 
-all:	FORCE
-	-@echo "$(SLAPD_BACKENDS)" | grep LDAP_SHELL 2>&1 > /dev/null; \
-	if [ $$? = 0 ]; then \
-            $(MAKE) $(MFLAGS) CC=$(CC) libback-shell.a; \
-	else \
-	    echo "Include -DLDAP_SHELL in SLAPD_BACKENDS in the"; \
-	    echo "Make-common file to build the shell backend"; \
-        fi
-
+all-srv:	FORCE
+	$(MAKE) $(MFLAGS) libback-shell.a
 
 libback-shell.a:	version.o
 	$(AR) ruv $@ $(OBJS) version.o
