Updated configure.in with more options (but haven't implemented them yet)

--- a/configure.in
+++ b/configure.in
@@ -14,30 +14,47 @@ dnl
 dnl Start Args
 AC_MSG_CHECKING(arguments)
 
+dnl general options
+CF_ARG_OPTION(debug,[  --enable-debug	enable debugging (yes)],[
+	LDAP_DEBUG=no],[LDAP_DEBUG=yes],yes)dnl
+CF_ARG_OPTION(cache,[  --enable-cache	enable caching (yes)],[
+	LDAP_CACHE=no],[LDAP_CACHE=yes],yes)dnl
+CF_ARG_OPTION(referrals,[  --enable-referrals	enable referrals (yes)],[
+	LDAP_REFERRALS=no],[LDAP_REFERRALS=yes],yes)dnl
+CF_ARG_OPTION(cldap,[  --enable-clapd	enable connectionless ldap (no)],[
+	LDAP_CLDAP=yes],[LDAP_CLDAP=no],no)dnl
+
 dnl server options
-CF_ARG_OPTION(ldapd,[  --enable-ldapd	enable building ldapd],[
+CF_ARG_OPTION(ldapd,[  --enable-ldapd	enable building ldapd (no)],[
 	BUILD_LDAPD=yes],[BUILD_LDAPD=no],no)dnl
-CF_ARG_OPTION(slapd,[  --enable-slapd	enable building slapd],[
+CF_ARG_OPTION(slapd,[  --enable-slapd	enable building slapd (yes)],[
 	BUILD_SLAPD=no],[BUILD_SLAPD=yes],yes)dnl
-CF_ARG_OPTION(slurpd,[  --enable-slurpd	enable building slurpd],[
+CF_ARG_OPTION(slurpd,[  --enable-slurpd	enable building slurpd (yes)],[
 	BUILD_SLURPD=no],[BUILD_SLURPD=yes],yes)dnl
 
 dnl Backend options
-CF_ARG_OPTION(ldbm,[  --enable-ldbm		enable ldbm backend],[
+CF_ARG_OPTION(ldbm,[  --enable-ldbm		enable ldbm backend (yes)],[
 	BUILD_LDBM=no],[BUILD_LDBM=yes],yes)dnl
-CF_ARG_OPTION(passwd,[  --enable-passwd	enable passwd backend],[
+CF_ARG_OPTION(passwd,[  --enable-passwd	enable passwd backend (yes)],[
 	BUILD_PASSWD=no],[BUILD_PASSWD=yes],yes)dnl
-CF_ARG_OPTION(shell,[  --enable-shell	enable shell backend],[
+CF_ARG_OPTION(shell,[  --enable-shell	enable shell backend (yes)],[
 	BUILD_SHELL=no],[BUILD_SHELL=yes],yes)dnl
 
-AC_ARG_WITH(ndbm,[  --with-ndbm		use NDB for LDBM backend],[
+AC_ARG_WITH(ndbm,[  --with-ndbm		use NDB for LDBM backend (any)],[
 	opt_ndbm=yes],[opt_ndbm=no])
-AC_ARG_WITH(gdbm,[  --with-gdbm		use GDBM for LDBM backend],[
+AC_ARG_WITH(gdbm,[  --with-gdbm		use GDBM for LDBM backend (any)],[
 	opt_gdbm=yes],[opt_gdbm=no])
-AC_ARG_WITH(dbhash,[  --with-dbhash		use Berkeley DB Hash for LDBM backend],[
+AC_ARG_WITH(dbhash,[  --with-dbhash		use Berkeley DB Hash for LDBM backend (any)],[
 	opt_dbhash=yes],[opt_dbhash=no])
-AC_ARG_WITH(dbbtree,[  --with-dbbtree	use Berkeley DB Btrees for LDBM backend],[
+AC_ARG_WITH(dbbtree,[  --with-dbbtree	use Berkeley DB Btrees for LDBM backend (any)],[
 	opt_dbbtree=yes],[opt_dbbtree=no])
+
+AC_ARG_WITH(kerberos,[  --with-kerberos	use Kerberos (no)],[
+	opt_kerberos=yes],[opt_kerberos=no])
+AC_ARG_WITH(kerberos-afs,[  --with-kerberos-afs	use AFS Kerberos (no)],[
+	opt_kerberos_afs=yes],[opt_kerberos_afs=no])
+AC_ARG_WITH(threads,[  --with-threads	use threads (yes)],[
+	opt_threads=yes],[opt_threads=no])
 
 AC_MSG_RESULT(done)
 
