--- a/Makefile.in
+++ b/Makefile.in
@@ -2,5 +2,24 @@
 # Copyright 1998 Net Boolean Incorporated
 # COPYING RESTRICTIONS APPLY, See COPYING file
 
-SUBDIRS= include libraries clients servers
+SUBDIRS= include libraries clients contrib servers
+
+makefiles:	FORCE
+	./config.status
+
+configure: configure.in aclocal.m4
+	autoconf
+
+# autoheader might not change config.h.in, so touch a stamp file
+${srcdir}/include/portable.h.in:	stamp-h.in
+${srcdir}/stamp-h.in: configure.in aclocal.m4 acconfig.h
+	cd ${srcdir} && autoheader
+	@echo timestamp > ${srcdir}/stamp-h.in
+
+config.h: stamp-h
+stamp-h: config.h.in config.status
+	./config.status
+
+config.status: configure
+	./config.status --recheck
 
