--- a/configure.in
+++ b/configure.in
@@ -238,14 +238,19 @@ AC_CHECK_HEADERS( \
 )
 
 dnl Checks for typedefs, structures, and compiler characteristics.
-AC_C_CONST
-AC_TYPE_UID_T
+AC_TYPE_GETGROUPS
+AC_TYPE_MODE_T
 AC_TYPE_OFF_T
 AC_TYPE_PID_T
+AC_TYPE_SIGNAL
 AC_TYPE_SIZE_T
+AC_TYPE_UID_T
 AC_STRUCT_ST_BLKSIZE
 AC_HEADER_TIME
 AC_STRUCT_TM
+
+dnl AC_C_BIGENDIAN
+AC_C_CONST
 
 dnl Checks for library functions.
 AC_FUNC_MEMCMP
@@ -263,10 +268,14 @@ AC_CHECK_FUNCS(		\
 	strdup			\
 	strerror		\
 	strstr			\
+	strrchr			\
 	strtod			\
 	strtol			\
 	strtoul			\
+	memcpy			\
 )
+
+AC_REPLACE_FUNCS(strdup)
 
 # Check Configuration
 CF_SYS_ERRLIST
@@ -289,6 +298,9 @@ clients/finger/Makefile:etc/top.mk:clients/finger/Makefile.in:etc/rules.mk \
 clients/gopher/Makefile:etc/top.mk:clients/gopher/Makefile.in:etc/rules.mk \
 clients/mail500/Makefile:etc/top.mk:clients/mail500/Makefile.in:etc/rules.mk \
 clients/rcpt500/Makefile:etc/top.mk:clients/rcpt500/Makefile.in:etc/rules.mk \
+contrib/Makefile:etc/top.mk:contrib/Makefile.in:etc/dir.mk \
+contrib/saucer/Makefile:etc/top.mk:contrib/saucer/Makefile.in:etc/rules.mk \
+contrib/whois++/Makefile:etc/top.mk:contrib/whois++/Makefile.in:etc/rules.mk \
 libraries/Makefile:etc/top.mk:libraries/Makefile.in:etc/dir.mk 	\
 libraries/libavl/Makefile:etc/top.mk:libraries/libavl/Makefile.in:etc/lib.mk \
 libraries/liblber/Makefile:etc/top.mk:libraries/liblber/Makefile.in:etc/lib.mk \
@@ -305,5 +317,6 @@ servers/slapd/back-shell/Makefile:etc/top.mk:servers/slapd/back-shell/Makefile.i
 servers/slapd/tools/Makefile:etc/top.mk:servers/slapd/tools/Makefile.in \
 servers/slapd/shell-backends/Makefile:etc/top.mk:servers/slapd/shell-backends/Makefile.in:etc/srv.mk \
 servers/slurpd/Makefile:etc/top.mk:servers/slurpd/Makefile.in:etc/srv.mk \
+tests/Makefile:etc/top.mk:tests/Makefile.in \
 Makefile:etc/top.mk:Makefile.in:etc/dir.mk, \
 	[date > stamp-h])
