Include of portable.h must be before use of USE_SYSCONF

--- a/tests/data/slapd-master.conf
+++ b/tests/data/slapd-master.conf
@@ -10,6 +10,7 @@ schemacheck	off
 #######################################################################
 
 database	ldbm
+cachesize	4
 suffix		"o=University of Michigan, c=US"
 directory	./test-db
 rootdn		"cn=Manager, o=University of Michigan, c=US"
