--- a/include/portable.h.in
+++ b/include/portable.h.in
@@ -216,6 +216,13 @@
  LDAP_API_FEATURE_X_OPENLDAP_V2_DNS
  LDAP_API_FEATURE_X_OPENLDAP_V2_REFERRALS
 */
+/* These are defined in lber_types.h */
+/*
+ LBER_INT_T
+ LBER_LEN_T
+ LBER_SOCKET_T
+ LBER_TAG_T
+*/
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
