--- a/servers/slapd/slapd.oc.conf
+++ b/servers/slapd/slapd.oc.conf
@@ -7,6 +7,21 @@ objectclass alias
 		aliasedObjectName,
 		objectClass
 
+objectclass referral
+	requires
+		ref,
+		objectClass
+
+objectclass dcobject
+	requires
+		objectClass,
+		dc
+
+objectclass uidobject
+	requires
+		objectClass,
+		uid
+
 objectclass country
 	requires
 		objectClass,
