--- a/tests/data/slapd.oc.conf
+++ b/tests/data/slapd.oc.conf
@@ -7,6 +7,11 @@ objectclass alias
 		aliasedObjectName,
 		objectClass
 
+objectclass referral
+	requires
+		ref
+		objectClass
+
 objectclass country
 	requires
 		objectClass,
@@ -83,18 +88,17 @@ objectclass organizationalUnit
 objectclass person
 	requires
 		objectClass,
-		sn,
 		cn
 	allows
 		description,
 		seeAlso,
+		sn,
 		telephoneNumber,
 		userPassword
 
 objectclass organizationalPerson
 	requires
 		objectClass,
-		sn,
 		cn
 	allows
 		description,
@@ -110,6 +114,7 @@ objectclass organizationalPerson
 		preferredDeliveryMethod,
 		registeredAddress,
 		seeAlso,
+		sn,
 		st,
 		streetAddress,
 		telephoneNumber,
@@ -161,7 +166,6 @@ objectclass groupOfNames
 objectclass residentialPerson
 	requires
 		objectClass,
-		sn,
 		cn,
 		l
 	allows
@@ -178,6 +182,7 @@ objectclass residentialPerson
 		preferredDeliveryMethod,
 		registeredAddress,
 		seeAlso,
+		sn,
 		st,
 		streetAddress,
 		telephoneNumber,
@@ -261,7 +266,6 @@ objectclass pilotObject
 objectclass newPilotPerson
 	requires
 		objectClass,
-		sn,
 		cn
 	allows
 		businessCategory,
@@ -270,6 +274,8 @@ objectclass newPilotPerson
 		homePhone,
 		homePostalAddress,
 		janetMailbox,
+		lastModifiedBy,
+		lastModifiedTime,
 		mail,
 		mailPreferenceOption,
 		mobile,
@@ -282,6 +288,7 @@ objectclass newPilotPerson
 		roomNumber,
 		secretary,
 		seeAlso,
+		sn,
 		telephoneNumber,
 		textEncodedORaddress,
 		uid,
@@ -663,9 +670,7 @@ objectclass kerberosSecurityObject
 objectclass umichPerson
 	requires
 		objectClass,
-		sn,
-		cn,
-		universityID
+		cn
 	allows
 		affiliationCode,
 		audio,
@@ -714,6 +719,7 @@ objectclass umichPerson
 		roomNumber,
 		secretary,
 		seeAlso,
+		sn,
 		st,
 		streetAddress,
 		telephoneNumber,
@@ -722,6 +728,7 @@ objectclass umichPerson
 		textEncodedORaddress,
 		title,
 		uid,
+		universityID,
 		updateSource,
 		userCertificate,
 		userClass,
