--- a/tests/data/slapd.at.conf
+++ b/tests/data/slapd.at.conf
@@ -3,6 +3,7 @@ attribute	personalsignature			bin
 attribute	jpegphoto				bin
 attribute	audio					bin
 attribute	labeledurl				ces
+attribute	ref						ces
 attribute	userpassword				ces
 attribute	telephonenumber				tel
 attribute	facsimiletelephonenumber	fax	tel
