--- a/tests/data/slapd-ref-slave.conf
+++ b/tests/data/slapd-ref-slave.conf
@@ -1,5 +1,5 @@
 #
-# master slapd config -- for testing of replication
+# master slapd config -- for referral testing
 #
 include		./data/slapd.at.conf
 include		./data/slapd.oc.conf
@@ -7,20 +7,18 @@ schemacheck	off
 pidfile     ./test-repl/slapd.pid
 argsfile    ./test-repl/slapd.args
 
-referral	"ldap://localhost:9009/"
-
 #######################################################################
 # ldbm database definitions
 #######################################################################
 
+referral	"ldap://hostG/"
+
 database	ldbm
 cachesize	0
-suffix		"o=University of Michigan, c=US"
+suffix		"c=US"
 directory	./test-repl
 rootdn		"cn=Manager, o=University of Michigan, c=US"
 rootpw		secret
-updatedn	"cn=Manager, o=University of Michigan, c=US"
-updateref	"ldap://localhost:9009/o=University of Michigan,c=US"
 index		cn,sn,uid	pres,eq,approx
 index		default		none
 # index		default		pres,eq,approx
