Fix simple referral test.

--- a/tests/data/slapd-ref-slave.conf
+++ b/tests/data/slapd-ref-slave.conf
@@ -1,5 +1,5 @@
 #
-# master slapd config -- for referral testing
+# referral slave slapd config -- for referral testing
 #
 include		./data/slapd.at.conf
 include		./data/slapd.oc.conf
@@ -11,13 +11,13 @@ argsfile    ./test-repl/slapd.args
 # ldbm database definitions
 #######################################################################
 
-referral	"ldap://hostG/"
+referral	"ldap://localhost:9009/"
 
 database	ldbm
 cachesize	0
-suffix		"c=US"
+suffix		"o=University of Mich, c=US"
 directory	./test-repl
-rootdn		"cn=Manager, o=University of Michigan, c=US"
+rootdn		"cn=Manager, o=University of Mich, c=US"
 rootpw		secret
 index		cn,sn,uid	pres,eq,approx
 index		default		none
