--- a/tests/data/slapd-ref-slave.conf
+++ b/tests/data/slapd-ref-slave.conf
@@ -1,5 +1,5 @@
 #
-# referral slave slapd config -- for referral testing
+# slave slapd config -- for default referral testing
 #
 include		./data/slapd.at.conf
 include		./data/slapd.oc.conf
