--- a/tests/data/slapd-repl-master.conf
+++ b/tests/data/slapd-repl-master.conf
@@ -4,23 +4,27 @@
 include		./data/slapd.at.conf
 include		./data/slapd.oc.conf
 schemacheck	off
+pidfile     ./test-db/slapd.pid
+argsfile    ./test-db/slapd.args
 
 #######################################################################
 # ldbm database definitions
 #######################################################################
 
 database	ldbm
+cachesize	0
 suffix		"o=University of Michigan, c=US"
 directory	./test-db
 rootdn		"cn=Manager, o=University of Michigan, c=US"
 rootpw		secret
 index		cn,sn,uid	pres,eq,approx
 index		default		none
+# index		default		pres,eq,approx
 lastmod		on
 
 replogfile	./test-db/slapd.replog
 
 replica		host=localhost:9010
-		binddn="cn=Manager, o=University of Michigan, c=US"
+		binddn="cn=Replica, o=University of Michigan, c=US"
 		bindmethod=simple
 		credentials=secret
